--- a/mutual-pairing.html
+++ b/mutual-pairing.html
@@ -40,8 +40,12 @@ $('#foo').click(function() {
 <body>
 <h1>ONCLICK-MAGIC: Mutual Pairing</h1>
 <br>
-<hr>
+    <hr>
 <br>
   <button id="foo">hello</button><button id="foo2">goodbye</button>
+<br>
+    <hr>
+<br>
+    <button href="https://willinspire.github.io/onclick-magic/">HOME</button>
 </body>
 </html>
