--- a/mutual-pairing.html
+++ b/mutual-pairing.html
@@ -3,7 +3,7 @@
 <head>
     <title>Mutual Pairing</title>
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-      <meta name="description" content="Discover the magic of mutually paired HTML "onclick" events.">
+      <meta name="description" content="Discover the magic of mutually paired HTML onclick events.">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta name="keywords" content="mutual pairing, onclick, html,onclick event">
 <style>
