--- a/mutual-pairing.html
+++ b/mutual-pairing.html
@@ -2,33 +2,11 @@
 <html>
 <head>
     <title>Mutual Pairing</title>
-      <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-      <meta name="description" content="Discover the magic of mutually paired HTML onclick events.">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="keywords" content="mutual pairing, onclick, html,onclick event">
-<style>
-#foo {
-    background-color: green;
-    color: white;
-    font-size: 22px;
-}
-#foo2 {
-    background-color: green;
-    color: white;
-    font-size: 22px;
-}
-#foo.active {
-    background-color: red;
-    color: white;
-    font-size: 22px;
-}
-#foo2.active {
-    background-color: red;
-    color: white;
-    font-size: 22px;
-}
-  </style>
-
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="description" content="Discover the magic of mutually paired HTML onclick events.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="mutual pairing, onclick, html,onclick event">
+    <link rel="stylesheet" type="text/css" href="https://willinspire.github.io/onclick-magic/mutual-pairing.css">
 </head>
 <body>
 <h1>ONCLICK-MAGIC: Mutual Pairing</h1>
