--- a/mutual-pairing.html
+++ b/mutual-pairing.html
@@ -14,17 +14,10 @@
     <hr>
 <br>
   <button id="foo">hello</button><button id="foo2">goodbye</button>
-    <script>
-$('#foo2').click(function() {
-    $('#foo').toggleClass('active');
-});
-$('#foo').click(function() {
-    $('#foo2').toggleClass('active');
-});  
-  </script>
+    <script src="https://willinspire.github.io/onclick-magic/mutual-pairing.js"></script>
 <br>
     <hr>
 <br>
-    <button href="https://willinspire.github.io/onclick-magic/">HOME</button>
+    <button><a href="https://willinspire.github.io/onclick-magic/">HOME</a></button>
 </body>
 </html>
