--- a/mutual-pairing.html
+++ b/mutual-pairing.html
@@ -14,7 +14,22 @@
 <br>
     <hr>
 <br>
-  <button id="foo">hello</button><button id="foo2">goodbye</button>
+  <button id="foo">hello</button>
+  <button id="foo2">goodbye</button>
+    <script>
+        var x;
+if (typeof x === 'undefined') {
+	$('.foo2').click(function() {
+    	$('.foo').toggleClass('active');
+});
+}
+var x;
+if (typeof x === 'undefined') {
+	$('.foo').click(function() {
+    	$('.foo2').toggleClass('active');
+});
+}
+    </script>
     
 <br>
     <hr>
