--- a/class-toggle.html
+++ b/class-toggle.html
@@ -39,7 +39,7 @@
  
 <script>
 $( "button" ).click(function() {
-  $( this ).toggleClass( "classB" );
+  $( this ).toggleClass( ".classB" );
 });
 </script>
  
